# screenlit

./: .gitignore  DESIGN.md  README.md  app.py  main.py  pyproject.toml  test_features.py  test_server.py
docs/: SDK.md
frontend/: .env.example  README.md  biome.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AccountModal.css  AccountModal.jsx  ChatPanel.css  ChatPanel.jsx  ConfigurationModal.css  ConfigurationModal.jsx  DionePowersScreen.css  DionePowersScreen.jsx  DocumentPanel.css  DocumentPanel.jsx  FilePreview.css  FilePreview.jsx  Header.css  Header.jsx  InviteCollaboratorModal.css  InviteCollaboratorModal.jsx  LoginScreen.css  LoginScreen.jsx  MemberDetailsModal.css  MemberDetailsModal.jsx  MessageDetailModal.css  MessageDetailModal.jsx  PublishNotification.css  PublishNotification.jsx  Scratchpad.css  Scratchpad.jsx  StatsPanel.css  StatsPanel.jsx  TasksPanel.css  TasksPanel.jsx  ToolsPanel.css  ToolsPanel.jsx  UserPreferencesPanel.css  UserPreferencesPanel.jsx
frontend/src/components/ui/: Button.css  Button.jsx
frontend/src/store/: index.ts  useAuthStore.ts  useChatStore.ts  useLayoutStore.ts  useProjectStore.ts  useTaskStore.ts  useThemeStore.ts  useWorkspaceStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: fileTypeDetector.js
screenlit/: __init__.py  app.py  artifacts.py  cli.py  layout.py  server.py  types.py
tests/: test_backend.py  test_new_features.py
