[project]
name = "screenlit"
version = "0.1.0"
description = "Screenlit: Artifact-First AI Application Framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "playwright>=1.57.0",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
]

[tool.setuptools.packages.find]
include = ["screenlit*"]
exclude = ["frontend*", "tests*"]
