[project]
name = "screenlit"
version = "0.1.0"
description = "Screenlit: Artifact-First AI Application Framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
]

[project.scripts]
screenlit = "screenlit.cli:main"

[tool.setuptools.packages.find]
include = ["screenlit*"]
exclude = ["frontend*", "tests*"]
